--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^1.1.6
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
+  another_carousel_pro: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +62,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/rog-1.png
+    # - assets/rog-1.png
+    # - assets/ROG.jpg
     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
